# pyhacl

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/pyhacl/: __main__.py  _hashlib.py
src/pyhacl/aead/: chacha_poly1305.py  chacha_poly1305_simd128.pxd  chacha_poly1305_simd256.pxd
src/pyhacl/hashlib/: __init__.py  _sha2.py
src/pyhacl/include/: hacl_hash_sha2.pxd
src/pyhacl/key_exchange/: curve25519_51.py  curve25519_64.pxd  curve25519_64.py
tests/: test_aead.py  test_hashlib.py  test_key_exchange.py
